--- a/dentaku2.html
+++ b/dentaku2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <script src='jquery-2.1.1.min.js'></script>
-<script src='dentaku.js'></script>
+<script src='dentaku2.js'></script>
 <title>電卓</title>
 </head>
 <body>
@@ -15,6 +15,7 @@
 	</div>
 	<div id='calc_content'>
 		<table border="1">
+			<tr><td><label id='mc' onclick='memory_clear'>MC</label></td><td><label id='mp' onclick='memory_add'>M+</label></td><td><label id='MM' onclick='memory_minus'>M-</label></td><td><label id='memory_result'>MR</label></td></tr>
 			<tr><td colspan='3'><label id='ac' onclick='all_clear()'>AC</label></td><td><label id='break' onclick='break_cul()'>÷</label></td></tr>
 			<tr><td><label id='sevenBtn' onclick='seven_add()'>７</label></td><td><label id='eightBtn' onclick='eight_add()'>８</label></td><td><label id='nineBtn' onclick='nine_add()'>９</label></td><td><label id='multiplyBtn' onclick="multiply_cul()">✕</label></td></tr>
 			<tr><td><label id='fourBtn' onclick='four_add()'>４</label></td><td><label id='fiveBtn' onclick='five_add()'>５</label></td><td><label id='sixBtn' onclick='six_add()'>６</label></td><td><label id='minusBtn' onclick='minus_cul()'>ー</label></td></tr>
