--- a/dentaku2.html
+++ b/dentaku2.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<script src='jquery-2.1.1.min.js'></script>
-<script src='dentaku2.js'></script>
-<title>電卓</title>
+	<meta charset="UTF-8">
+	<script src='jquery-2.1.1.min.js'></script>
+	<script src='dentaku2.js'></script>
+	<link rel="stylesheet" type="text/css" href="dentaku2.css">
+	<title>電卓</title>
 </head>
 <body>
 	<div id='title_content'>
